--- a/src/react/components/pages/models/modelPage.scss
+++ b/src/react/components/pages/models/modelPage.scss
@@ -4,62 +4,20 @@
   margin: 5px 0 5px 0;
 }
 
-.datas {
-  display: flex;
+.app-connections-page {
   flex-grow: 1;
+  display: flex;
   flex-direction: row;
-  height: 10px; // Not sure why it helps
-}
+  height: 0;
 
-.datas-main {
-  position: relative;
-  display: flex;
-  flex-grow: 1;
-  height: 100%;
-  justify-content: center;
-  > i {
-    font-size: 36pt;
+  &-list {
+      flex-basis: 20vw;
+      min-width: 250px;
+      max-width: 300px;
   }
-}
 
-.datas-sidebar {
-  height: 100%;
-  display: flex;
-  width: 400px;
-  min-width: 400px;
-}
-
-.input-disabled {
-  color: #bbb;
-  background-color: white;
-}
-
-.dummyInputFile {
-  color: #757575;
-  border: 1px;
-  padding: 4px;
-  padding-left: 8px;
-  padding-right: 8px;
-  border-radius: 2px;
-  width: 100%;
-  flex: 1;
-}
-
-.seperator {
-  margin: 20px 10px;
-  position: relative;
-  background-color: inherit;
-  width: 45%;
-  display: inline-block;
-}
-
-.seperator:before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 0;
-  border-top: 1px solid white;
-  background: white;
-  width: 100%;
-  transform: translateY(-50%);
+  &-detail {
+      flex-grow: 1;
+      overflow: auto;
+  }
 }
