--- a/src/react/components/pages/datasPage/datasPage.scss
+++ b/src/react/components/pages/datasPage/datasPage.scss
@@ -11,6 +11,25 @@
   overflow: hidden;
   position: relative;
 
+  &-sidebar {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+
+    &-nav {
+      width: 100%;
+      flex-grow: 1;
+
+       .asset-list {
+        user-select: none;
+       }
+
+      .asset-list:focus {
+        outline: none;
+      }
+    }
+  }
+
   &-content {
    flex-grow: 1;
     display: flex;
@@ -36,31 +55,112 @@
       }
     }
 
-    &-sidebar {
-      display: flex;
-      flex-direction: column;
-      flex-grow: 1;
-
-      &-nav {
-        width: 100%;
-        flex-grow: 1;
-
-        .asset-list {
-          user-select: none;
-        }
-
-        .asset-list:focus {
-          outline: none;
-        }
-      }
-    }
-
     &-right-sidebar {
       display: flex;
       margin-left: auto;
       width: 400px;
     }
+  }
 
+
+  .asset-item {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid $lighter-3;
+    padding: 0.5em;
+    border: solid 1px $lighter-2;
+
+    &:hover {
+      position: relative;
+      background-color: $lighter-3;
+      cursor: pointer;
+    }
+
+    &.selected {
+      color: #fff;
+      background-color: $lighter-4;
+      font-weight: 600;
+    }
+
+    &-image {
+      flex-grow: 1;
+      overflow: hidden;
+      display: flex;
+      background-color: $darker-6;
+      text-align: center;
+      position: relative;
+      margin: auto;
+      width: 100%;
+
+      &:hover {
+        &::after {
+          content: " ";
+          position: absolute;
+          height: 100%;
+          width: 100%;
+          background-color: $lighter-3;
+          z-index: 1;
+        }
+      }
+    }
+
+    &-metadata {
+      display: flex;
+      flex-direction: row;
+      font-size: 70%;
+
+      white-space: nowrap;
+
+      .asset-filename {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        flex-grow: 1;
+      }
+    }
+  }
+}
+
+.asset-preview {
+  display: flex;
+  flex-grow: 1;
+
+  &-container {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+  }
+
+  .asset-loading {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+  .asset-loading-spinner {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+  }
+
+  .asset-loading-ocr-spinner {
+    margin-top: 30%;
+    font-size: 0.75em;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+  &.portrait {
+    margin: 0 auto;
   }
 }
 
