--- a/src/react/components/pages/models/modelPage.scss
+++ b/src/react/components/pages/models/modelPage.scss
@@ -4,7 +4,7 @@
   margin: 5px 0 5px 0;
 }
 
-.app-connections-page {
+.models {
   flex-grow: 1;
   display: flex;
   flex-direction: row;
@@ -20,4 +20,14 @@
       flex-grow: 1;
       overflow: auto;
   }
+
+  .app-connections-page-list-bg-lighter-1 {
+    flex-basis: 20vw;
+    min-width: 250px;
+    max-width: 300px;
+    background-color: rgba(255, 255, 255, 0.05);
+  }
 }
+
+
+
