get list Custom Models

--- a/src/react/components/pages/models/modelPage.scss
+++ b/src/react/components/pages/models/modelPage.scss
@@ -4,6 +4,13 @@
   margin: 5px 0 5px 0;
 }
 
+th{
+  border: 1px solid #fff;
+}
+td{
+  border: 1px solid #fff;
+}
+
 .models {
   flex-grow: 1;
   display: flex;
