--- a/src/react/components/common/imageMap/styles.css
+++ b/src/react/components/common/imageMap/styles.css
@@ -3,9 +3,10 @@
     height: 100%;
     padding-bottom: 10px;
 }
-  
+
 .map {
     background-color: Gainsboro;
+    position: absolute;
     width: 100%;
     height: 100%;
     flex-grow: 1;
