--- a/src/react/components/pages/projectSettings/projectSettingsPage.scss
+++ b/src/react/components/pages/projectSettings/projectSettingsPage.scss
@@ -9,6 +9,22 @@
   &-settings {
     flex-grow: 1;
   }
+&-loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+&-loading-spinner {
+  margin:auto;
+  font-size: 24px;
+}
 
   &-metrics {
     display: flex;
