--- a/src/react/components/pages/homepage/homePage.scss
+++ b/src/react/components/pages/homepage/homePage.scss
@@ -42,4 +42,19 @@
         min-width: 250px;
         max-width: 300px;
     }
+    &-loading {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      text-align: center;
+      display: flex;
+        width: 100%;
+        height: 100%;
+    }
+    &-loading-spinner {
+      margin:auto;
+      font-size: 24px;
+    }
 }
