--- a/src/react/components/shell/helpMenu.scss
+++ b/src/react/components/shell/helpMenu.scss
@@ -12,7 +12,24 @@
     }
 }
 
-.help-menu-modal{
+.help-menu-container {
     display: flex;
-    width: auto;
+    flex-flow: column nowrap;
+    align-items: stretch;
+    color: #136691;
+
+    &-header {
+        flex: 1 1 auto;
+        border-top: 4px solid;
+        align-items: center;
+        font-weight: bold;
+        padding: 12px 12px 14px 24px;
+    }
+
+    &-body {
+        flex: 4 4 auto;
+        padding: 0 24px 24px 24px;
+        overflow-y: hidden;
+        color: #000000;
+    }
 }
