--- a/src/react/components/shell/helpMenu.scss
+++ b/src/react/components/shell/helpMenu.scss
@@ -24,6 +24,9 @@
         align-items: center;
         font-weight: bold;
         padding: 12px 12px 14px 24px;
+        &-icon{
+            float: right;
+        }
     }
 
     &-body {
